@@ -1,10 +1,10 @@
 package com.programmers.heycake.domain.order.facade;
 
-import static com.programmers.heycake.common.utils.JwtUtil.*;
+import static com.programmers.heycake.common.mapper.OrderMapper.*;
+import static com.programmers.heycake.common.utils.AuthenticationUtil.*;
 import static com.programmers.heycake.domain.image.model.vo.ImageType.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,9 +19,11 @@ import com.programmers.heycake.domain.offer.facade.OfferFacade;
 import com.programmers.heycake.domain.order.model.dto.request.MyOrderRequest;
 import com.programmers.heycake.domain.order.model.dto.request.OrderCreateRequest;
 import com.programmers.heycake.domain.order.model.dto.response.MyOrderResponseList;
-import com.programmers.heycake.domain.order.model.dto.response.OrderGetResponse;
-import com.programmers.heycake.domain.order.model.dto.response.OrderGetSimpleServiceResponse;
-import com.programmers.heycake.domain.order.model.dto.response.OrdersGetResponse;
+import com.programmers.heycake.domain.order.model.dto.response.OrderGetDetailResponse;
+import com.programmers.heycake.domain.order.model.dto.response.OrderGetDetailServiceResponse;
+import com.programmers.heycake.domain.order.model.dto.response.OrderGetServiceSimpleResponse;
+import com.programmers.heycake.domain.order.model.dto.response.OrderGetSimpleResponse;
+import com.programmers.heycake.domain.order.model.dto.response.OrderGetSimpleResponses;
 import com.programmers.heycake.domain.order.model.vo.CakeCategory;
 import com.programmers.heycake.domain.order.service.HistoryService;
 import com.programmers.heycake.domain.order.service.OrderService;
@@ -45,7 +47,7 @@ public class OrderFacade {
 	@Transactional
 	public void createOrder(OrderCreateRequest orderCreateRequest) {
 		Long orderId = orderService.create(orderCreateRequest);
-		if (orderCreateRequest.cakeCategory() != null) {
+		if (orderCreateRequest.cakeImages() != null) {
 			for (int i = 0; i < orderCreateRequest.cakeImages().size(); i++) {
 				imageIntegrationService.createAndUploadImage(
 						orderCreateRequest.cakeImages().get(i),
@@ -68,27 +70,40 @@ public class OrderFacade {
 	}
 
 	@Transactional
-	public OrderGetResponse getOrder(Long orderId) {
-		return orderService.getOrder(orderId);
+	public OrderGetDetailResponse getOrder(Long orderId) {
+		OrderGetDetailServiceResponse orderGetDetailServiceResponse = orderService.getOrder(orderId);
+		ImageResponses imageResponses = imageService.getImages(orderGetDetailServiceResponse.orderId(), ORDER);
+		return OrderMapper.toOrderGetDetailResponse(orderGetDetailServiceResponse, imageResponses);
 	}
 
 	@Transactional
-	public OrdersGetResponse getOrders(
+	public OrderGetSimpleResponses getOrders(
 			Long cursorId, int pageSize, CakeCategory cakeCategory, String region
 	) {
-		List<OrderGetSimpleServiceResponse> orders =
+		List<OrderGetServiceSimpleResponse> orderGetSimpleServiceResponses =
 				orderService.getOrders(cursorId, pageSize, cakeCategory, region);
 
-		orders.stream()
-				.map(
-						orderSimpleGetServiceResponse ->
-								OrderMapper.toOrderSimpleGetResponse(
+		List<OrderGetSimpleResponse> orderGetSimpleResponses =
+				orderGetSimpleServiceResponses
+						.stream()
+						.map(orderSimpleGetServiceResponse ->
+								toOrderGetSimpleResponse(
 										orderSimpleGetServiceResponse,
-										imageService.getImages(orderSimpleGetServiceResponse.orderId(), ORDER)
-								))
-				.collect(Collectors.toList())
-		;
-		return new OrdersGetResponse(orders);
+										imageService.getImages(orderSimpleGetServiceResponse.orderId(), ORDER))
+						)
+						.toList();
+
+		int size = orderGetSimpleResponses.size();
+		long lastCursor = 0;
+
+		for (OrderGetSimpleResponse orderGetSimpleResponse : orderGetSimpleResponses) {
+			lastCursor = orderGetSimpleResponse.orderId();
+		}
+
+		if (size < pageSize) {
+			return new OrderGetSimpleResponses(orderGetSimpleResponses, lastCursor, true);
+		}
+		return new OrderGetSimpleResponses(orderGetSimpleResponses, lastCursor, false);
 	}
 
 	@Transactional
@@ -97,7 +112,8 @@ public class OrderFacade {
 		images.images()
 				.forEach(
 						image -> imageIntegrationService.deleteImage(
-								orderId, ImageType.OFFER, ORDER_IMAGE_SUB_PATH, image.savedFilename()));
+								orderId, ImageType.OFFER, ORDER_IMAGE_SUB_PATH, image.savedFilename())
+				);
 
 		List<Long> orderOfferIdList = orderService.getOrderOfferIdList(orderId);
 		orderOfferIdList.forEach(offerFacade::deleteOfferWithoutAuth);
